objects/ortoo_qra__Matching_Rules__c.object
<CustomObject>
    <description>It has follow me/member matching criteria linked to an assignment group.</description>
    <fields>
        <fullName>ortoo_qra__Assignment_Group__c</fullName>
        <label>Assignment Group</label>
        <referenceTo>ortoo_qra__Assignment_Group__c</referenceTo>
        <relationshipName>Matching_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Follow_Me_Active_Records_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Records Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Follow_Me_Match_Field__c</fullName>
        <label>Follow Me Match Field</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Follow_Me_This_Distribution_Group_only__c</fullName>
        <defaultValue>true</defaultValue>
        <label>This Distribution Group only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Follow_Me_Time_Unit__c</fullName>
        <label>Time Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Minutes</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Follow_Me_Units_Of_Time__c</fullName>
        <label>Units Of Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Follow_Me_Update_Field__c</fullName>
        <label>Update Field</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Follow_Me_Update_Value__c</fullName>
        <label>Update Value</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Ignore_Cap__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Ignore Cap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Ignore_Quota__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Ignore Quota</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Match_Field__c</fullName>
        <label>Match Field</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Member_Lookup_Field_For_Lookup_Object__c</fullName>
        <label>Member Lookup Field For Lookup Object</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Member_Lookup_Match_Field__c</fullName>
        <label>Member_Lookup_Match_Field (NoLongerUsed)</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Member_Lookup_Match_Object__c</fullName>
        <label>Member Lookup Match Object</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Member_Lookup_Object__c</fullName>
        <label>Member Lookup Object (No Longer Used)</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Member_Lookup_RHS_Lookup_Object__c</fullName>
        <description>This field stores the object name to be used on right hand side of the equation. It defaults to User but can be any object that has a lookup to User.</description>
        <inlineHelpText>Select object from which you want to select a field to be used in this matching rule&apos;s equation. It defaults to User but can be any object that has a lookup to User.</inlineHelpText>
        <label>Member Lookup RHS Lookup Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Member_Lookup_RHS_Lookup_User_Link_Field__c</fullName>
        <description>This is the field on the Member Lookup RHS Lookup Object to use to link back to User, or the field on User that looks up to the object, depending on which way round the link works.</description>
        <inlineHelpText>Select field from selection lookup object to be used in this matching rule&apos;s equation.</inlineHelpText>
        <label>Member Lookup RHS Lookup User Link Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Member_Lookup_User_Match_Field__c</fullName>
        <label>Member Lookup_User_Match_Field</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Operator__c</fullName>
        <label>Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Processing_Order__c</fullName>
        <label>Processing Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__RHS1_Treat_Blank_Values_As_x_Fixed_Value__c</fullName>
        <label>Fixed Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__RHS1_Treat_blank_values_as__c</fullName>
        <label>Treat blank values as</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ortoo_qra__TreatValuesAsOptions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Rule_Type__c</fullName>
        <label>Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Follow Me</fullName>
                </value>
                <value>
                    <fullName>Member Lookup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>QA Matching Rules</label>
    <nameField>
        <label>Matching Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Matching Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>